# gbkr_rag_slack

./: .tool_versions  pyproject.toml
src/: chatbot_engine.py  gradio_app.py  name.txt  name_data.txt  slack_app.py
